preparing Web page before sending CFP

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <nav>
         <ul>
 <!--             <li><a href="#pc">Program Committee</a></li> -->
-<!--            <li><a href="#">Accepted Papers</a></li>-->
-<!--            <li><a href="#">Registration</a></li>-->
+<!--             <li><a href="#">Accepted Papers</a></li>-->
+<!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
-	    <li><a href="#travel">Travel Awards</a></li>
 <!--             <li><a href="#program" class="bordered">Program</a></li> -->
-            <!--li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li-->
-            			<li><a href="#submission" class="bordered">Paper Submission</a></li>
+<!--             <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li> -->
+            <li><a href="#submission" class="bordered">Paper Submission</a></li>
+            <li><a href="#travel">Travel Awards</a></li>
             <li><a href="#previous">Past Workshops</a></li>
             <li><a href="#sponsors">Sponsors</a></li>
-	    </ul>
+       </ul>
     </nav>
 </header>
 
@@ -104,7 +104,7 @@
 		<div class="col">
 			<h2>Workshop Organizers</h2>
 			<ul>
-                <li><a href="http://olafhartig.de/">Olaf Hartig</a>, Link&ouml;ping University, Sweden</li>
+                <li><a href="http://olafhartig.de/">Olaf Hartig</a>, Amazon Web Services &amp; Link&ouml;ping University, Sweden</li>
                 <li><a href="http://research.nii.ac.jp/~yyoshida/">Yuichi Yoshida</a>, National Institute of Informatics, Japan</li>
 			</ul><br>
 			<h2>Steering Committee</h2>
@@ -121,9 +121,8 @@
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
             <p>Authors are invited to submit original, unpublished research papers (full and short), demonstrations and case-studies. </p>
-            <p>Submissions must follow the latest 2-column ACM Master article "sigconf" proceedings LaTeX <a href="https://www.acm.org/binaries/content/assets/publications/consolidated-tex-template/acmart-master.zip"> template</a> with 10pt font size, and have to be double-anonymous. 
-            Use the following latex command to change the default font size: <code>\documentclass[sigconf,10pt]{acmart}</code>.</p>
-            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2023.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2023 conference</a>. Submissions that do not follow these requirements will be rejected immediately.</p>
+            <p>Submissions must follow the latest 2-column ACM Proceedings format using the latest <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>, and have to be anonymous. </p>
+            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2023.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2023 conference</a>. Use the following latex command to compile your paper without author names: <code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
             <p>Length Requirements:</p>
             <ul>
@@ -131,7 +130,8 @@
                 <li>Case studies should be a maximum of 4 pages in length, excluding references and appendix.</li>
                 <li>Short papers and demonstration papers should be a maximum of 4 pages in length, excluding references and appendix.</li>
             </ul>
-            <br>
+            <p>Submissions that do not follow these requirements will be rejected immediately.</p>
+            <br/>
             <p>Submissions will be handled through Easychair.
 <!--             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2022">here</a>. -->
             </p>
