details about the new EasyChair instance

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p>Submissions that do not follow these requirements will be rejected immediately.</p>
             <br/>
             <p>Submissions will be handled through Easychair.
-<!--             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2022">here</a>. -->
+            To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2023">here</a>.
             </p>
         </div>
     </section>
@@ -219,7 +219,7 @@
         <div class="col-full-b">
             <h2>Get in touch</h2>
             <p>
-                For questions, please <a href="mailto:gradesnda2022@easychair.org">email</a>. Follow us on <a href="https://twitter.com/gradesnda">Twitter</a> for latest updates about the workshop.
+                For questions, please <a href="mailto:gradesnda2023@easychair.org">email</a>. Follow us on <a href="https://twitter.com/gradesnda">Twitter</a> for latest updates about the workshop.
             </p>
         </div>
     </section>
