added first keynote speaker

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
 
     <section class="row">
         <div class="col-full">
+            <h2>Keynote Speaker</h2>
+            <p>We are very honored to host the following keynote speaker this year.</p>
+            <ul>
+                <li><a href="https://www.cse.cuhk.edu.hk/~jcheng/">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK)</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="row">
+        <div class="col-full">
             <h2>Call for Papers</h2>
             <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government (1) to
                 create a forum for discussing recent advances in (large-scale) graph data management and graph analytics
