second keynote speaker added

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <section class="row">
         <div class="col-full">
             <h2>Keynote Speaker</h2>
-            <p>We are very honored to host the following keynote speaker this year.</p>
+            <p>We are very honored to host the following two keynote speakers this year.</p>
             <ul>
+                <li><a href="https://www.linkedin.com/in/amyhodler">Amy Hodler</a>&nbsp; RelationalAI</li>
                 <li><a href="https://www.cse.cuhk.edu.hk/~jcheng/">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK)</li>
             </ul>
         </div>
