new affiliation of Anil Pacaci

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <li>	Arijit	Khan,	Nanyang Technological University	</li>
                 <li>	Josep Lluís	Larriba-Pey,	Universitat Politècnica de Catalunya	</li>
                 <li>	Makoto	Onizuka,	Osaka University	</li>
-                <li>	Anil	Pacaci,	University of Waterloo	</li>
+                <li>	Anil	Pacaci,	Apple	</li>
                 <li>	Evaggelia	Pitoura,	Univ. of Ioannina	</li>
                 <li>	Matei	Ripeanu,	The University of British Columbia	</li>
                 <li>	Petra	Selmer,	Birkbeck College, University of London	</li>
