Petra's affiliation has changed

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <li>	Anil	Pacaci,	Apple	</li>
                 <li>	Evaggelia	Pitoura,	Univ. of Ioannina	</li>
                 <li>	Matei	Ripeanu,	The University of British Columbia	</li>
-                <li>	Petra	Selmer,	Birkbeck College, University of London	</li>
+                <li>	Petra	Selmer,	Bloomberg	</li>
                 <li>	Marco	Serafini,	University of Massachusetts Amherst	</li>
                 <li>	Hiroaki	Shiokawa,	University of Tsukuba	</li>
                 <li>	Vasileios	Trigonakis,	Oracle Labs	</li>
