--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
     <nav>
         <ul>
-<!--             <li><a href="#">Accepted Papers</a></li>-->
+            <li><a href="#accepted" class="bordered">Accepted Papers</a></li>
 <!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
 <!--             <li><a href="#program" class="bordered">Program</a></li> -->
 <!--             <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li> -->
-            <li><a href="#submission" class="bordered">Paper Submission</a></li>
+            <li><a href="#submission">Paper Submission</a></li>
             <li><a href="#pc">Program Committee</a></li>
             <li><a href="#travel">Travel Awards</a></li>
             <li><a href="#previous">Past Workshops</a></li>
@@ -48,6 +48,14 @@
 </header>
 
 <div id="content">
+
+    <section class="row">
+        <div class="col-full">
+            <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government (1) to
+                create a forum for discussing recent advances in (large-scale) graph data management and graph analytics
+                systems, as well as propose and discuss novel methods and techniques towards (2) addressing domain-specific challenges or (3) handling noise in real-world graphs.</p>
+        </div>
+    </section>
 
     <section class="row">
         <div class="col-full">
@@ -62,11 +70,27 @@
 
     <section class="row">
         <div class="col-full">
+            <h2><a id="accepted"></a>Accepted Papers</h2>
+            <p>The following papers have been accepted for this year's workshop.</p>
+            <ul>
+                <li><strong>Better Distributed Graph Query Planning With Scouting Queries</strong><br/>Tomáš Faltín, Vasileios Trigonakis, Ayoub Berdai, Luigi Fusco, Călin Iorgulescu, Sungpack Hong and Hassan Chafi</li>
+                <li><strong>EAGER: Explainable Question Answering Using Knowledge Graphs</strong><br/>Andrew Chai, Alireza Vezvaei, Lukasz Golab, Mehdi Kargar, Divesh Srivastava, Jaroslaw Szlichta and Morteza Zihayat</li>
+                <li><strong>Going with the Flow: Real-Time Max-Flow on Asynchronous Dynamic Graphs</strong><br/>Juntong Luo, Scott Sallinen and Matei Ripeanu</li>
+                <li><strong>Future-Time Temporal Path Queries</strong><br/>Christos Gkartzios and Evaggelia Pitoura</li>
+                <li><strong>Fast Synthetic Data-Aware Log Generation for Temporal Declarative Models</strong><br/>Giacomo Bergami</li>
+                <li><strong>Learning Graph Neural Networks using Exact Compression</strong><br/>Jeroen Bollen, Jasper Steegmans, Jan Van den Bussche and Stijn Vansummeren</li>
+                <li><strong>Interpretability Methods for Graph Neural Networks (Demo)</strong><br/>Ehsan Bonabi Mobaraki and Arijit Khan</li>
+            </ul>
+        </div>
+    </section>
+
+<!--
+    <section class="row">
+        <div class="col-full">
             <h2>Call for Papers</h2>
             <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government (1) to
                 create a forum for discussing recent advances in (large-scale) graph data management and graph analytics
-                systems, as well as propose and discuss novel methods and techniques towards (2) addressing domain-specific
-                challenges or (3) handling noise in real-world graphs.</p>
+                systems, as well as propose and discuss novel methods and techniques towards (2) addressing domain-specific challenges or (3) handling noise in real-world graphs.</p>
             <p>The workshop will be of interest to researchers in the development of novel data-management applications
                 and systems for large-scale graph analytics. More specifically, the intended audience are, but not
                 limited to, academic and industrial computer scientists interested in databases and data mining, machine
@@ -96,6 +120,7 @@
             <p> Accepted papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
         </div>
     </section>
+-->
 
 	<section class="row">
 		<div class="col">
