--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@
             <h2>Keynote Speaker</h2>
             <p>We are very honored to host the following two keynote speakers this year.</p>
             <ul>
-                <li><a href="https://www.linkedin.com/in/amyhodler">Amy Hodler</a>&nbsp; RelationalAI</li>
-                <li><a href="https://www.cse.cuhk.edu.hk/~jcheng/">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK)</li>
+                <li>
+                    <a href="https://www.linkedin.com/in/amyhodler" style="font-weight: bold;">Amy Hodler</a>&nbsp; RelationalAI
+                    <br/>
+                    Amy is an evangelist for graph analytics and responsible AI. She is also the co-author of O’Reilly books on <a href="https://www.amazon.com/Graph-Algorithms-Practical-Examples-Apache/dp/1492047686">Graph Algorithms</a> and <a href="https://neo4j.com/knowledge-graphs-data-in-context-for-responsive-businesses/">Knowledge Graphs</a> as well as a contributor to the Routledge book, <a href="https://www.routledge.com/Massive-Graph-Analytics/Bader/p/book/9780367464127">Massive Graph Analytics</a>. Amy has decades of experience in emerging tech at companies such as Microsoft, Hewlett-Packard (HP), Hitachi IoT, Neo4j, and Cray. At RelationalAI, she is the Graph Evangelist and Sr. Director of Product Marketing. Amy recently founded GraphGeeks.org to bring together graph enthusiastics and highlight their work.
+                </li>
+                <li>
+                    <a href="https://www.cse.cuhk.edu.hk/~jcheng/" style="font-weight: bold;">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK) &amp; Kasma Pte Ltd
+                    <br/>
+                    
+                </li>
             </ul>
         </div>
     </section>
