--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li>
                     <a href="https://www.cse.cuhk.edu.hk/~jcheng/" style="font-weight: bold;">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK) &amp; Kasma Pte Ltd
                     <br/>
-                    
+                    Prof. James Cheng is currently with the Department of Computer Science and Engineering at the Chinese University of Hong Kong and his research focuses on developing systems for graph data management, graph computing, and graph machine learning. Many of the systems developed by his team have been deployed in various large-scale industrial production environments. Prof.&nbsp;Cheng is also the founder of a startup company specializing in graph database and graph data analytics.
                 </li>
             </ul>
         </div>
