--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#accepted" class="bordered">Accepted Papers</a></li>
+<!--             <li><a href="#accepted" class="bordered">Accepted Papers</a></li> -->
 <!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
-<!--             <li><a href="#program" class="bordered">Program</a></li> -->
+            <li><a href="#program" class="bordered">Program</a></li>
 <!--             <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li> -->
-            <li><a href="#submission">Paper Submission</a></li>
+<!--             <li><a href="#submission">Paper Submission</a></li> -->
             <li><a href="#pc">Program Committee</a></li>
-            <li><a href="#travel">Travel Awards</a></li>
+<!--             <li><a href="#travel">Travel Awards</a></li> -->
             <li><a href="#previous">Past Workshops</a></li>
-            <li><a href="#sponsors">Sponsors</a></li>
+<!--             <li><a href="#sponsors">Sponsors</a></li> -->
        </ul>
     </nav>
 </header>
@@ -59,7 +59,7 @@
 
     <section class="row">
         <div class="col-full">
-            <h2>Keynote Speaker</h2>
+            <h2>Keynote Speakers</h2>
             <p>We are very honored to host the following two keynote speakers this year.</p>
             <ul>
                 <li>
@@ -78,6 +78,124 @@
 
     <section class="row">
         <div class="col-full">
+            <h2><a id="program"></a>Program</h2>
+            <p style="color:gray"><i>All times are in PDT (Pacific Daylight Time, the local time in Seattle).</i></p>
+            <p class='session'>
+            <div class="separator"><b>Start of the workshop at 9:00 AM</b></div>
+            </p>
+            <p class='session'>
+                <span class='time'>9:00 AM - 9:05 AM</span>
+                <span class='stitle'>Welcome</span>
+            </p>
+            <p class='session'>
+                <span class='time'>9:05 AM - 10:05 AM</span>
+                <span class='stitle'>Keynote by James Cheng (CUHK &amp; Kasma Pte Ltd): <i>Building a Platform for Graph Feature Management</i></span>
+                <span style="display: block; margin-top: 0.5em; font-size: smaller; line-height: 1.4em;"><b>Abstract:</b> Graph features are crucial to many applications such as recommender systems and risk management systems. The process to obtain useful graph features involves ingesting data from various upstream data sources, defining the desired graph features for the required applications, constructing a feature engineering workflow to compute the features, and storing and managing the resulting features for downstream tasks (e.g., graph AI and graph BI) and for future reuse. To the majority of users, especially SMEs and non-tech companies, this process poses daunting challenges as it requires users to not only learn various methods (e.g., graph analytical algorithms, non-GNN graph embeddings, GNNs) to define graph features and program their computation, but also learn many infrastructures (e.g., upstream databases, downstream ML systems, graph analytics systems) to compute, manage and use the graph features in production. These challenges have significantly restricted the wider applications of graph technologies such as graph AI and graph BI currently in industry. The current solution provided by major graph database vendors (e.g., Amazon Neptune, Neo4j, TigerGraph) is to connect various upstream and downstream systems to their own graph database, which is used to compute and manage graph features. However, such a solution ties users to a specific graph infrastructure that may not be the preferred infrastructure and may even require them to re-develop their applications on a new infrastructure. In addition, a specific graph database or infrastructure often does not have the best performance for all workloads and certainly does not support the computation of all types of graph features. As a result, the existing solution limits users' flexibility in choosing their own infrastructure and their productivity in developing their applications.
+                <br/>
+                In Part 1 of this talk, I will introduce various types of graph features and their applications. Then I will present some trends in using graph databases for graph feature computation and management, analyze the limitations of the existing methods, and identify the requirements of a graph feature management solution that is practical and highly usable to average users. In Part 2 of this talk, I will introduce our ongoing project that aims at providing a highly usable graph feature platform. Our solution decouples graph feature logic specification and management (i.e., how features are defined, coded and managed) from the generation and execution of the workflow for feature computation (i.e., execution plan generation and the actual execution), so that users can flexibly select different infrastructures suitable for the computation of specific types of graph features. It also manages the upstream, downstream and feature engineering and serving infrastructures, so as to free users from tedious tasks associated with deploying infrastructures and connecting them in a feature engineering dataflow. Thus, users can focus on creating and delivering innovative feature workflow logic. Finally, I will also highlight some possible future directions about graph feature management.</span>
+                <span style="display: block; margin-top: 0.5em; font-size: smaller; line-height: 1.4em;"><b>Speaker:</b> Prof. James Cheng is currently with the Department of Computer Science and Engineering at the Chinese University of Hong Kong and his research focuses on developing systems for graph data management, graph computing, and graph machine learning. Many of the systems developed by his team have been deployed in various large-scale industrial production environments. Prof.&nbsp;Cheng is also the founder of a startup company specializing in graph database and graph data analytics.</span>
+            </p>
+            <p class='session'>
+                <span class='time'>10:05 AM - 10:30 AM</span>
+                <span class='stitle'>Paper Presentation</span>
+                <ul>
+                    <li class='paper'>
+                        <span class='title'>Future-Time Temporal Path Queries</span>
+                        <span class='authors'>Christos Gkartzios and Evaggelia Pitoura</span>
+                    </li>
+                </ul>
+            </p>
+            <p class='session'>
+            <div class="separator">Coffee Break (30 mins)</div>
+            </p>
+            <p class='session'>
+                <span class='time'>11:00 AM - 12:30 PM</span>
+                <span class='stitle'>Paper Presentations</span>
+                <ul>
+                    <li class='paper'>
+                        <span class='title'>Going with the Flow: Real-Time Max-Flow on Asynchronous Dynamic Graphs</span>
+                        <span class='authors'>Juntong Luo, Scott Sallinen, and Matei Ripeanu</span>
+                    </li>
+                    <li class='paper'>
+                        <span class='title'>Fast Synthetic Data-Aware Log Generation for Temporal Declarative Models</span>
+                        <span class='authors'>Giacomo Bergami</span>
+                    </li>
+                    <li class='paper'>
+                        <span class='title'>Learning Graph Neural Networks using Exact Compression</span>
+                        <span class='authors'>Jeroen Bollen, Jasper Steegmans, Jan Van den Bussche, and Stijn Vansummeren</span>
+                    </li>
+                </ul>
+            </p>
+            <p class='session'>
+            <div class="separator">Lunch Break (60 mins)</div>
+            </p>
+            <p class='session'>
+                <span class='time'>1:30 PM - 2:30 PM</span>
+                <span class='stitle'>Keynote by Amy Hodler (RelationalAI): <i>The Commercial Side of Graph Analytics: Big Uses, Big Mistakes, Big Opportunities</i></span>
+                <span style="display: block; margin-top: 0.5em; font-size: smaller; line-height: 1.4em;"><b>Abstract:</b> Connectivity is the cornerstone of our contemporary world, permeating various sectors like retail, communications, biology, and finance. Although this inherent interconnectedness holds substantial meaning and predictive power, harnessing it for practical use in the business realm often proves challenging. In this presentation, we will delve into the commercial applications of graph analytics, highlighting both common pitfalls to avoid and promising opportunities to explore.
+                <br/>
+                To begin, we will explore the prevalent use cases of graph analytics, encompassing areas such as fraud detection, supply chain optimization, data management, and recommendations. We'll also shed light on why many teams tend to deploy only a limited set of graph algorithms. Additionally, we will examine how the COVID-19 pandemic has impacted the utilization of graphs in business settings.
+                <br/>
+                Next, we will venture into the major mistakes that businesses often make when implementing graph analytics. These blunders range from technical hurdles like scalability issues and handling tricky data types to human challenges such as fostering a graph-thinking mindset and avoiding excessive perfectionism. Moreover, you will gain quick tips to help teams secure funding for graph projects.
+                <br/>
+                Lastly, we will delve into some of the most significant prospects within the commercial space. We will address enduring challenges, such as transforming business data into a graph format and ensuring interoperability with production processes. We will also dedicate time to exploring the rising interest in combining graphs with AI systems, particularly the recent buzz surrounding combining graphs with generative AI. While this particular trend garners attention, we will look at other promising opportunities that it may overshadow.
+                <br/>
+                By the end of this talk, you will have gained a comprehensive understanding of the practical applications of graph analytics in business contexts. Furthermore, you'll gain valuable knowledge about pitfalls to avoid, strategies for securing funding, and a forward-looking perspective on emerging possibilities in this dynamic field.</span>
+                <span style="display: block; margin-top: 0.5em; font-size: smaller; line-height: 1.4em;"><b>Speaker:</b> Amy is an evangelist for graph analytics and responsible AI. She is also the co-author of O’Reilly books on <a href="https://www.amazon.com/Graph-Algorithms-Practical-Examples-Apache/dp/1492047686">Graph Algorithms</a> and <a href="https://neo4j.com/knowledge-graphs-data-in-context-for-responsive-businesses/">Knowledge Graphs</a> as well as a contributor to the Routledge book, <a href="https://www.routledge.com/Massive-Graph-Analytics/Bader/p/book/9780367464127">Massive Graph Analytics</a>. Amy has decades of experience in emerging tech at companies such as Microsoft, Hewlett-Packard (HP), Hitachi IoT, Neo4j, and Cray. At RelationalAI, she is the Graph Evangelist and Sr. Director of Product Marketing. Amy recently founded GraphGeeks.org to bring together graph enthusiastics and highlight their work.</span>
+            </p>
+            <p class='session'>
+                <span class='time'>2:30 PM - 3:00 PM</span>
+                <span class='stitle'>Paper Presentation</span>
+                <ul>
+                    <li class='paper'>
+                        <span class='title'>Better Distributed Graph Query Planning With Scouting Queries</span>
+                        <span class='authors'>Tomáš Faltín, Vasileios Trigonakis, Ayoub Berdai, Luigi Fusco, Călin Iorgulescu, Sungpack Hong, and Hassan Chafi</span>
+                    </li>
+                </ul>
+            </p>
+            <p class='session'>
+            <div class="separator">Coffee Break (30 mins)</div>
+            </p>
+            <p class='session'>
+                <span class='time'>3:30 PM - 4:10 PM</span>
+                <span class='stitle'>Demo Presentations</span>
+                <ul>
+                    <li class='paper'>
+                        <span class='title'>Interpretability Methods for Graph Neural Networks</span>
+                        <span class='authors'>Ehsan Bonabi Mobaraki and Arijit Khan</span>
+                    </li>
+                    <li class='paper'>
+                        <span class='title'>EAGER: Explainable Question Answering Using Knowledge Graphs</span>
+                        <span class='authors'>Andrew Chai, Alireza Vezvaei, Lukasz Golab, Mehdi Kargar, Divesh Srivastava, Jaroslaw Szlichta, and Morteza Zihayat</span>
+                    </li>
+                </ul>
+            </p>
+            <p class='session'>
+                <span class='time'>4:10 PM - 5:00 PM</span>
+                <span class='stitle'>Invited Talks</span>
+                <ul>
+                    <li class='paper'>
+                    t.b.c.
+<!--                         <span class='title'>Interpretability Methods for Graph Neural Networks</span> -->
+<!--                         <span class='authors'>Ehsan Bonabi Mobaraki and Arijit Khan</span> -->
+                    </li>
+                    <li class='paper'>
+                    t.b.c.
+<!--                         <span class='title'>Interpretability Methods for Graph Neural Networks</span> -->
+<!--                         <span class='authors'>Ehsan Bonabi Mobaraki and Arijit Khan</span> -->
+                    </li>
+                </ul>
+            </p>
+            <p class='session'>
+            <div class="separator">End of the workshop at 5:00 PM</div>
+            </p>
+
+        </div>
+    </section>
+
+<!--
+    <section class="row">
+        <div class="col-full">
             <h2><a id="accepted"></a>Accepted Papers</h2>
             <p>The following papers have been accepted for this year's workshop.</p>
             <ul>
@@ -91,6 +209,7 @@
             </ul>
         </div>
     </section>
+-->
 
 <!--
     <section class="row">
@@ -160,6 +279,7 @@
 		</div>
 	</section>
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
@@ -180,6 +300,7 @@
             </p>
         </div>
     </section>
+-->
 
     <section class="row">
         <div class="col-full">
@@ -221,6 +342,7 @@
         </div>
     </section>
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="travel"></a>Student Travel Awards</h2>
@@ -247,11 +369,12 @@
             </ul>
         </div>
     </section>
+-->
 
     <section class="row">
         <h2 id="previous">Past Workshops</h2>
         <p>GRADES-NDA is in its sixth edition, and had successful joint meetings collocated with SIGMOD/PODS 2018, 2019, 2020, 2021, and 2022, respectively. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous SIGMOD-PODS meetings, GRADES since 2013 and NDA since 2016. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p>
-        <div class="col">
+        <div class="col" style="width:30%">
             <h2>GRADES-NDA</h2>
             <ul>
                 <li><a href="http://gradesnda.github.io/2022/">GRADES-NDA 2022</a></li>
@@ -259,14 +382,9 @@
                 <li><a href="http://gradesnda.github.io/2020/">GRADES-NDA 2020</a></li>
                 <li><a href="https://sites.google.com/site/gradesnda2019/">GRADES-NDA 2019</a></li>
                 <li><a href="https://sites.google.com/site/gradesnda2018/">GRADES-NDA 2018</a></li>
-            </ul><br>
-            <h2>NDA</h2>
-            <ul>
-                <li><a href="https://sites.google.com/site/networkdataanalytics2017/">NDA 2017</a></li>
-                <li><a href="https://sites.google.com/site/networkdataanalytics2016/">NDA 2016</a></li>
             </ul>
         </div>
-        <div class="col">
+        <div class="col" style="width:30%">
             <h2>GRADES</h2>
             <ul>
                 <li><a href="https://event.cwi.nl/grades/2017/index.shtml">GRADES 2017</a></li>
@@ -276,8 +394,16 @@
                 <li><a href="https://event.cwi.nl/grades/2013/index.shtml">GRADES 2013</a></li>
             </ul>
         </div>
+        <div class="col" style="width:30%">
+            <h2>NDA</h2>
+            <ul>
+                <li><a href="https://sites.google.com/site/networkdataanalytics2017/">NDA 2017</a></li>
+                <li><a href="https://sites.google.com/site/networkdataanalytics2016/">NDA 2016</a></li>
+            </ul>
+        </div>
     </section>
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2 id="sponsors">Sponsored by</h2>
@@ -291,12 +417,9 @@
 		<a href="https://http://linkedin.com/" class="col-3"><img src="img/linkedin-logo.png" alt="LinkedIn"></a>
 		<a href="https://www.sap.com/index.html" class="col-3"><img src="img/sap-logo.png" alt="SAP"></a>
 	    </div>
-            <!--div class="photo-grid">
-                <a href="https://www.sap.com/index.html" class="col-3"><img src="img/sap-logo.png" alt="SAP"></a>
-                <a href="https://www.google.com/" class="col-3"><img src="img/google.png" alt="GOOGLE"></a>
-            </div-->
         </div>
     </section>
+-->
 
     <section class="row">
         <div class="col-full-b">
