--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <body>
 
 <header>
+    <!--
     <div class="photo-grid">
         <a href="/"><img src="img/sigmod2023-logo.jpg" alt="GRADES-NDA"></a>
     </div>
-    <!--
+    -->
+    
     <div id="logo-container">
         <div id="logo"><a href="/"><img src="img/grades_nda_v3_twitter.png" alt="Example photo"></a></div>
     </div>
-    -->
-    <div id="title-container">6th Joint Workshop on Graph Data Management
-        Experiences & Systems (GRADES) and Network Data Analytics (NDA)
+    <div id="title-container">7th Joint Workshop on Graph Data Management
+        Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
     </div>
-    <div id="subtitle-container"> Co-located with <a href="https://2023.sigmod.org/"> SIGMOD 2023 </a> (18 June 2023, Seattle, WA, USA)
+    <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2024 </a> (June 9 or 14, 2024, Santiago, Chile)
     </div>
     <div>
         <a href="https://twitter.com/gradesnda?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gradesnda</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<!--        <a href="https://twitter.com/intent/tweet?button_hashtag=gradesnda20&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false" data-size="large">Tweet #gradesnda20</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
     </div>
     <nav>
         <ul>
@@ -57,12 +57,15 @@
         </div>
     </section>
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2>Proceedings</h2>
             <p>The proceedings of the workshop are published in the ACM Digital Library under the <a href="https://doi.org/10.1145/3594778">DOI 10.1145/3594778</a>.</p>
     </section>
+-->
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2>Keynote Speakers</h2>
@@ -81,7 +84,9 @@
             </ul>
         </div>
     </section>
+-->
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="program"></a>Program</h2>
@@ -198,6 +203,7 @@
 
         </div>
     </section>
+-->
 
 <!--
     <section class="row">
@@ -217,7 +223,6 @@
     </section>
 -->
 
-<!--
     <section class="row">
         <div class="col-full">
             <h2>Call for Papers</h2>
@@ -247,23 +252,23 @@
                 <li>Spatial and temporal graph analytics</li>
                 <li>Analytics on social, biological, retail, marketing, customer care, financial, healthcare, transportation network data sets</li>
                 <li> Descriptions of graph data management use cases and query workloads, and experiences with applying data management technologies in such situations</li>
-                <li>Vision and systems papers describing potential or real applications and benefits of graph management</li>
+                <li>Vision and systems papers describing potential or real applications and benefits of graph management, in particular (but not only) in the age of large language models (LLMs)</li>
             </ul>
             <br>
             <p> Accepted papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
         </div>
     </section>
--->
+
 
 	<section class="row">
 		<div class="col">
 			<h2><a id="dates"></a>Important Dates</h2>
 			<ul>
-                <li>Abstract Submission: <strike>March 15</strike> March 20, 2023</li>
-                <li>Paper Submission: <strike>March 22</strike> March 27, 2023</li>
-                <li>Notifications: <strike>April 19</strike> April 24, 2023</li>
-                <li>Camera Ready Submission: <strike>May 3</strike> May 8, 2023</li>
-                <li>Workshop Date: June 18, 2023</li>
+                <li>Abstract Submission: <!--<strike>March 15</strike>--> March 8, 2024</li>
+                <li>Paper Submission: March 15, 2024</li>
+                <li>Notifications: April 12, 2024</li>
+                <li>Camera Ready Submission: April 26, 2024</li>
+                <li>Workshop Date: June 9 or 14, 2024</li>
 			</ul>
 			<p></p>
 			<i>All deadlines are 23:59 Hours AoE</i>
@@ -273,7 +278,7 @@
 			<h2>Workshop Organizers</h2>
 			<ul>
                 <li><a href="http://olafhartig.de/">Olaf Hartig</a>, Amazon Web Services &amp; Link&ouml;ping University, Sweden</li>
-                <li><a href="http://research.nii.ac.jp/~yyoshida/">Yuichi Yoshida</a>, National Institute of Informatics, Japan</li>
+                <li><a href="http://itu.dk/~zoka/">Zoi Kaoudi</a>, IT University of Copenhagen, Denmark</li>
 			</ul><br>
 			<h2>Steering Committee</h2>
 			<ul>
@@ -285,13 +290,12 @@
 		</div>
 	</section>
 
-<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
             <p>Authors are invited to submit original, unpublished research papers (full and short), demonstrations and case-studies. </p>
             <p>Submissions must follow the latest 2-column ACM Proceedings format using the latest <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>, and have to be anonymous. </p>
-            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2023.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2023 conference</a>. Use the following latex command to compile your paper without author names: <code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
+            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2024.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2024 conference</a>. Use the following latex command to compile your paper without author names: <code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
             <p>Length Requirements:</p>
             <ul>
@@ -302,12 +306,12 @@
             <p>Submissions that do not follow these requirements will be rejected immediately.</p>
             <br/>
             <p>Submissions will be handled through Easychair.
-            To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2023">here</a>.
+<!--             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2023">here</a>. -->
             </p>
         </div>
     </section>
--->
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee</h2>
@@ -347,6 +351,7 @@
             </ul>
         </div>
     </section>
+-->
 
 <!--
     <section class="row">
@@ -379,10 +384,11 @@
 
     <section class="row">
         <h2 id="previous">Past Workshops</h2>
-        <p>GRADES-NDA is in its sixth edition, and had successful joint meetings collocated with SIGMOD/PODS 2018, 2019, 2020, 2021, and 2022, respectively. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous SIGMOD-PODS meetings, GRADES since 2013 and NDA since 2016. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p>
+        <p>GRADES-NDA is in its seventh edition, and had successful joint meetings co-located with ACM SIGMOD/PODS from 2018 to 2023. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous ACM SIGMOD/PODS conferences, GRADES since 2013 and NDA since 2016. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p>
         <div class="col" style="width:30%">
             <h2>GRADES-NDA</h2>
             <ul>
+                <li><a href="http://gradesnda.github.io/2023/">GRADES-NDA 2023</a></li>
                 <li><a href="http://gradesnda.github.io/2022/">GRADES-NDA 2022</a></li>
                 <li><a href="http://gradesnda.github.io/2021/">GRADES-NDA 2021</a></li>
                 <li><a href="http://gradesnda.github.io/2020/">GRADES-NDA 2020</a></li>
@@ -431,7 +437,7 @@
         <div class="col-full-b">
             <h2>Get in touch</h2>
             <p>
-                For questions, please <a href="mailto:gradesnda2023@easychair.org">email</a>. Follow us on <a href="https://twitter.com/gradesnda">Twitter</a> for latest updates about the workshop.
+                For questions, please <a href="mailto:gradesnda2024@easychair.org">email</a>. Follow us on <a href="https://twitter.com/gradesnda">X (formerly Twitter)</a> for latest updates about the workshop.
             </p>
         </div>
     </section>
