--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/vendor/fluidbox.min.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>GRADES-NDA 2023</title>
+    <title>GRADES-NDA 2024</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <div id="title-container">7th Joint Workshop on Graph Data Management
         Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
     </div>
-    <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2024 </a> (June 9 or 14, 2024, Santiago, Chile)
+    <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2024 </a> (June 9, 2024, Santiago, Chile)
     </div>
     <div>
         <a href="https://twitter.com/gradesnda?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gradesnda</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -306,7 +306,7 @@
             <p>Submissions that do not follow these requirements will be rejected immediately.</p>
             <br/>
             <p>Submissions will be handled through Easychair.
-<!--             To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2023">here</a>. -->
+            To submit click <a href="https://easychair.org/conferences/?conf=gradesnda2024">here</a>.
             </p>
         </div>
     </section>
