remove 'handling noise' from the statement about the main goal of the workshop

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
     <section class="row">
         <div class="col-full">
-            <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government (1) to
+            <p> The goal of GRADES-NDA is to bring together researchers from academia, industry, and government to
                 create a forum for discussing recent advances in (large-scale) graph data management and graph analytics
-                systems, as well as propose and discuss novel methods and techniques towards (2) addressing domain-specific challenges or (3) handling noise in real-world graphs.</p>
+                systems, as well as propose and discuss novel methods and techniques towards addressing domain-specific challenges in real-world graphs.</p>
         </div>
     </section>
 
