new date for the workshop: Jun.14

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="title-container">7th Joint Workshop on Graph Data Management
         Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
     </div>
-    <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2024 </a> (June 9, 2024, Santiago, Chile)
+    <div id="subtitle-container"> Co-located with <a href="https://2024.sigmod.org/"> SIGMOD/PODS 2024 </a> (June 14, 2024, Santiago, Chile)
     </div>
     <div>
         <a href="https://twitter.com/gradesnda?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gradesnda</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -268,7 +268,7 @@
                 <li>Paper Submission: March 15, 2024</li>
                 <li>Notifications: April 12, 2024</li>
                 <li>Camera Ready Submission: April 26, 2024</li>
-                <li>Workshop Date: June 9 or 14, 2024</li>
+                <li>Workshop Date: June 14, 2024</li>
 			</ul>
 			<p></p>
 			<i>All deadlines are 23:59 Hours AoE</i>
