--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
 		<div class="col">
 			<h2><a id="dates"></a>Important Dates</h2>
 			<ul>
-                <li>Abstract Submission: <!--<strike>March 15</strike>--> March 8, 2024</li>
-                <li>Paper Submission: March 15, 2024</li>
-                <li>Notifications: April 12, 2024</li>
-                <li>Camera Ready Submission: April 26, 2024</li>
+                <li>Abstract Submission: <strike>March 8</strike> March 15, 2024</li>
+                <li>Paper Submission: <strike>March 15</strike> March 22, 2024</li>
+                <li>Notifications: April 19, 2024</li>
+                <li>Camera Ready Submission: May 3, 2024</li>
                 <li>Workshop Date: June 14, 2024</li>
 			</ul>
 			<p></p>
