first keynote speaker (Ioana)

--- a/index.html
+++ b/index.html
@@ -65,26 +65,30 @@
     </section>
 -->
 
-<!--
+
     <section class="row">
         <div class="col-full">
             <h2>Keynote Speakers</h2>
             <p>We are very honored to host the following two keynote speakers this year.</p>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/amyhodler" style="font-weight: bold;">Amy Hodler</a>&nbsp; RelationalAI
+                    <a href="https://pages.saclay.inria.fr/ioana.manolescu/" style="font-weight: bold;">Ioana Manolescu</a>&nbsp; Inria &amp; Ecole Polytechnique
                     <br/>
-                    Amy is an evangelist for graph analytics and responsible AI. She is also the co-author of O’Reilly books on <a href="https://www.amazon.com/Graph-Algorithms-Practical-Examples-Apache/dp/1492047686">Graph Algorithms</a> and <a href="https://neo4j.com/knowledge-graphs-data-in-context-for-responsive-businesses/">Knowledge Graphs</a> as well as a contributor to the Routledge book, <a href="https://www.routledge.com/Massive-Graph-Analytics/Bader/p/book/9780367464127">Massive Graph Analytics</a>. Amy has decades of experience in emerging tech at companies such as Microsoft, Hewlett-Packard (HP), Hitachi IoT, Neo4j, and Cray. At RelationalAI, she is the Graph Evangelist and Sr. Director of Product Marketing. Amy recently founded GraphGeeks.org to bring together graph enthusiastics and highlight their work.
+                    Ioana Manolescu is a Senior Researcher at Inria, the national french institute of research in computer science and applied mathematics, and a part-time professor at Ecole Polytechnique, France's leading engineering school. Her main research interests are data integration, semistructured data management, and DB+AI methods and tools for data journalism and journalistic fact checking. She has co-authored 170 articles, several books, and is a recipient of the ACM SIGMOD 2020 Contribution Award. She has been a member of the SIGMOD Executive Committee and of the PVLDB Endowment Board, an Editor in chief of the SIGMOD Record, and a general chair of the ICDE conference.
+                    <br/>
+                    <strong>Keynote title: The Real World is Graph-Structured: Retrieving Meaning from Heterogeneous Data</strong>
+                    <br/>
+                    <strong>Abstract:</strong> Integrating heterogeneous data is an old problem with many successive twists. Challenging data integration problems often feature heterogeneity not only at the level of the schema, but also that of the data model. In the <a href="https://connectionstudio.inria.fr/">ConnectionLens project</a>, we have shown that heterogeneous data of many semistructured models can be converted in fine-granularity graphs, which can be enriched and densified with the help of information extraction. Such fine-grain graphs, however, are hard to grasp for non-technical users. To help them get acquainted with a dataset, we devised an abstraction method, which identifies, in fine-granularity data graphs, structured objects endowed with an internal structure, and relationships between them. Our approach, implemented in a system called <a href="https://team.inria.fr/cedar/projects/abstra/">Abstra</a>, inputs a semistructured dataset, and outputs a representation thereof resembling an Entity-Relationship dataset. In contrast with traditional E-R models, our entities may feature deep nesting, reflecting the nested and possibly recursive structure present in some data models. Thus, ConnectionLens with Abstra provide an automated way of "rescuing" the conceptual model, which we argue is best viewed as a graph, behind any application dataset.
+                    <br/>
+                    (Joint work with Nelly Barret, Prajna Upadhyay and many other colleagues)
                 </li>
                 <li>
-                    <a href="https://www.cse.cuhk.edu.hk/~jcheng/" style="font-weight: bold;">James Cheng</a>&nbsp; The Chinese University of Hong Kong (CUHK) &amp; Kasma Pte Ltd
-                    <br/>
-                    Prof. James Cheng is currently with the Department of Computer Science and Engineering at the Chinese University of Hong Kong and his research focuses on developing systems for graph data management, graph computing, and graph machine learning. Many of the systems developed by his team have been deployed in various large-scale industrial production environments. Prof.&nbsp;Cheng is also the founder of a startup company specializing in graph database and graph data analytics.
+                    t.b.d.
                 </li>
             </ul>
         </div>
     </section>
--->
+
 
 <!--
     <section class="row">
