accepted papers and PC

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
     <nav>
         <ul>
-<!--             <li><a href="#accepted" class="bordered">Accepted Papers</a></li> -->
+            <li><a href="#accepted" class="bordered">Accepted Papers</a></li>
 <!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
-            <li><a href="#program" class="bordered">Program</a></li>
+<!--             <li><a href="#program" class="bordered">Program</a></li> -->
 <!--             <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li> -->
 <!--             <li><a href="#submission">Paper Submission</a></li> -->
             <li><a href="#pc">Program Committee</a></li>
@@ -209,24 +209,23 @@
     </section>
 -->
 
-<!--
+
     <section class="row">
         <div class="col-full">
             <h2><a id="accepted"></a>Accepted Papers</h2>
             <p>The following papers have been accepted for this year's workshop.</p>
             <ul>
-                <li><strong>Better Distributed Graph Query Planning With Scouting Queries</strong><br/>Tomáš Faltín, Vasileios Trigonakis, Ayoub Berdai, Luigi Fusco, Călin Iorgulescu, Sungpack Hong and Hassan Chafi</li>
-                <li><strong>EAGER: Explainable Question Answering Using Knowledge Graphs</strong><br/>Andrew Chai, Alireza Vezvaei, Lukasz Golab, Mehdi Kargar, Divesh Srivastava, Jaroslaw Szlichta and Morteza Zihayat</li>
-                <li><strong>Going with the Flow: Real-Time Max-Flow on Asynchronous Dynamic Graphs</strong><br/>Juntong Luo, Scott Sallinen and Matei Ripeanu</li>
-                <li><strong>Future-Time Temporal Path Queries</strong><br/>Christos Gkartzios and Evaggelia Pitoura</li>
-                <li><strong>Fast Synthetic Data-Aware Log Generation for Temporal Declarative Models</strong><br/>Giacomo Bergami</li>
-                <li><strong>Learning Graph Neural Networks using Exact Compression</strong><br/>Jeroen Bollen, Jasper Steegmans, Jan Van den Bussche and Stijn Vansummeren</li>
-                <li><strong>Interpretability Methods for Graph Neural Networks (Demo)</strong><br/>Ehsan Bonabi Mobaraki and Arijit Khan</li>
+                <li><strong>Understanding High-Performance Subgraph Pattern Matching: A Systems Perspective</strong><br/>Akshit Sharma, Dinesh Mehta, and Bo Wu</li>
+                <li><strong>Space &amp; Time Efficient Leapfrog Triejoin</strong><br/>Diego Arroyuelo, Daniela Campos, Adrián Gómez Brandón, Gonzalo Navarro, Carlos Rojas, and Domagoj Vrgoc</li>
+                <li><strong>TelarKG: a Knowledge Graph of Chile's Constitutional Process</strong><br/>Renzo Angles, Vicente Calisto, Javiera Díaz, Sebastián Ferrada, Aidan Hogan, Alexander Pinto, Juan Reutter, Carlos Rojas, Henry Rosales-Méndez, Hernan Sarmiento, Etienne Toussaint, and Domagoj Vrgoc</li>
+                <li><strong>Scaling Differential Computation for Large-Scale Graph Processing</strong><br/>Siddhartha Sahu and Semih Salihoglu</li>
+                <li><strong>A Benchmark to Understand the Role of Knowledge Graphs on Large Language Model’s Accuracy for Question Answering on Enterprise SQL Databases</strong><br/>Juan F. Sequeda, Dean Allemang, and Bryon Jacob</li>
+                <li><strong>HomeRun: A Cardinality Estimation Advisor for Graph Databases</strong><br/>Wilco van Leeuwen, George H. L. Fletcher, and Nikolay Yakovets</li>
             </ul>
         </div>
     </section>
--->
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2>Call for Papers</h2>
@@ -262,7 +261,7 @@
             <p> Accepted papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
         </div>
     </section>
-
+-->
 
 	<section class="row">
 		<div class="col">
@@ -294,6 +293,7 @@
 		</div>
 	</section>
 
+<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="submission"></a>Paper Submission</h2>
@@ -314,48 +314,40 @@
             </p>
         </div>
     </section>
+-->
 
-<!--
     <section class="row">
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee</h2>
             <ul>
-                <li>	Renzo	Angles,	Universidad de Talca	</li>
-                <li>	Marcelo	Arenas,	PUC Chile	</li>
-                <li>	Akhil	Arora,	Ecole Polytechnique Fédérale de Lausanne	</li>
-                <li>	Amitabha	Bagchi,	Indian Institute of Technology, Delhi	</li>
-                <li>	Srikanta	Bedathur,	IIT Delhi	</li>
-                <li>	Yang	Cao,	The University of Edinburgh	</li>
-                <li>	Juan	Colmenares,	LinkedIn	</li>
-                <li>	Amol	Deshpande,	University of Maryland	</li>
-                <li>	Sourav	Dutta,	Huawei Research	</li>
-                <li>	George H. L.	Fletcher,	Eindhoven University of Technology	</li>
-                <li>	Irini	Fundulaki,	ICS-FORTH	</li>
-                <li>	Russ	Harmer,	CNRS &amp; ENS Lyon	</li>
-                <li>	Jan	Hidders,	Birkbeck College, University of London	</li>
-                <li>	Alexandru	Iosup,	VU	</li>
-                <li>	Panos	Kalnis,	King Abdullah University of Science and Technology	</li>
-                <li>	Zoi	Kaoudi,	IT University of Copenhagen	</li>
-                <li>	Arijit	Khan,	Nanyang Technological University	</li>
-                <li>	Josep Lluís	Larriba-Pey,	Universitat Politècnica de Catalunya	</li>
-                <li>	Makoto	Onizuka,	Osaka University	</li>
-                <li>	Anil	Pacaci,	Apple	</li>
-                <li>	Evaggelia	Pitoura,	Univ. of Ioannina	</li>
-                <li>	Matei	Ripeanu,	The University of British Columbia	</li>
-                <li>	Petra	Selmer,	Bloomberg	</li>
-                <li>	Marco	Serafini,	University of Massachusetts Amherst	</li>
-                <li>	Hiroaki	Shiokawa,	University of Tsukuba	</li>
-                <li>	Vasileios	Trigonakis,	Oracle Labs	</li>
-                <li>	Ana Lucia	Varbanescu,	University of Amsterdam	</li>
-                <li>	Hannes	Voigt,	Neo4j	</li>
-                <li>	Yinghui	Wu,	Case Western Reserve University	</li>
-                <li>	Yinglong	Xia,	Facebook	</li>
-                <li>	Shangdi	Yu,	MIT	</li>
-                <li>	Wenjie	Zhang,	The University of New South Wales	</li>
+<li>	Renzo	Angles,	Universidad de Talca	</li>
+<li>	Marcelo	Arenas,	PUC Chile	</li>
+<li>	Amitabha	Bagchi,	Indian Institute of Technology, Delhi	</li>
+<li>	Kaustubh	Beedkar,	IIT Delhi	</li>
+<li>	Yang	Cao,	The University of Edinburgh	</li>
+<li>	Nathalie	Charbel,	Neo4j	</li>
+<li>	Juan	Colmenares,	Microsoft	</li>
+<li>	Sourav	Dutta,	Huawei Research	</li>
+<li>	George H. L.	Fletcher,	Eindhoven University of Technology	</li>
+<li>	Russ	Harmer,	CNRS & ENS Lyon	</li>
+<li>	Jan	Hidders,	Birkbeck College, University of London	</li>
+<li>	Davide	Mottin,	Aarhus University	</li>
+<li>	Nikos	Ntarmos,	Huawei Technologies R&D (UK) Ltd	</li>
+<li>	Evaggelia	Pitoura,	Univ. of Ioannina	</li>
+<li>	Petra	Selmer,	Bloomberg	</li>
+<li>	Marco	Serafini,	University of Massachusetts Amherst	</li>
+<li>	Hiroaki	Shiokawa,	University of Tsukuba	</li>
+<li>	Vasileios	Trigonakis,	Oracle Labs	</li>
+<li>	Hannes	Voigt,	Neo4j	</li>
+<li>	Yinghui	Wu,	Case Western Reserve University	</li>
+<li>	Yinglong	Xia,	Facebook	</li>
+<li>	Yuichi	Yoshida,	National Institute of Informatics	</li>
+<li>	Shangdi	Yu,	MIT	</li>
+
             </ul>
         </div>
     </section>
--->
+
 
 <!--
     <section class="row">
