proceedings links to ACM DL

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                 <span class='stitle'>Paper Presentations</span>
                 <ul>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661897">Understanding High-Performance Subgraph Pattern Matching: A Systems Perspective</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661897">Understanding High-Performance Subgraph Pattern Matching: A Systems Perspective</a></span>
                         <span class='authors'>Akshit Sharma, Dinesh Mehta, and Bo Wu</span>
                     </li>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661898">Space & Time Efficient Leapfrog Triejoin</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661898">Space & Time Efficient Leapfrog Triejoin</a></span>
                         <span class='authors'>Diego Arroyuelo, Daniela Campos, Adrián Gómez Brandón, Gonzalo Navarro, Carlos Rojas, and Domagoj Vrgoc</span>
                     </li>
                 </ul>
@@ -130,15 +130,15 @@
                 <span class='stitle'>Paper Presentations</span>
                 <ul>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661901">A Benchmark to Understand the Role of Knowledge Graphs on Large Language Model’s Accuracy for Question Answering on Enterprise SQL Databases</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661901">A Benchmark to Understand the Role of Knowledge Graphs on Large Language Model’s Accuracy for Question Answering on Enterprise SQL Databases</a></span>
                         <span class='authors'>Juan F. Sequeda, Dean Allemang, and Bryon Jacob</span>
                     </li>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661902">HomeRun: A Cardinality Estimation Advisor for Graph Databases</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661902">HomeRun: A Cardinality Estimation Advisor for Graph Databases</a></span>
                         <span class='authors'>Wilco van Leeuwen, George H. L. Fletcher, and Nikolay Yakovets</span>
                     </li>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661899">TelarKG: a Knowledge Graph of Chile's Constitutional Process</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661899">TelarKG: a Knowledge Graph of Chile's Constitutional Process</a></span>
                         <span class='authors'>Renzo Angles, Vicente Calisto, Javiera Díaz, Sebastián Ferrada, Aidan Hogan, Alexander Pinto, Juan Reutter, Carlos Rojas, Henry Rosales-Méndez, Hernan Sarmiento, Etienne Toussaint, and Domagoj Vrgoc</span>
                     </li>
                 </ul>
@@ -149,7 +149,7 @@
                 <span class='stitle'>Paper Presentation</span>
                 <ul>
                     <li class='paper'>
-                        <span class='title'><a href="https://doi.org/10.1145/3661304.3661900">Scaling Differential Computation for Large-Scale Graph Processing</a></span>
+                        <span class='title'><a title="Full Citation in the ACM Digital Library" referrerpolicy="no-referrer-when-downgrade" href="https://dl.acm.org/doi/10.1145/3661304.3661900">Scaling Differential Computation for Large-Scale Graph Processing</a></span>
                         <span class='authors'>Siddhartha Sahu and Semih Salihoglu</span>
                     </li>
                 </ul>
